test/bad/functions/type09.px

func neg(b: Bool = false): Bool def
    return not b

func f(g: Bool->Bool): Bool def
    return g(b = true)

print f(neg)
